# nano-harness

./: .env.example  .gitignore  GAP_ANALYSIS.md  MVP_CHECKLIST.md  README.md  config.toml  config.toml.example  fibonacci.py  nano-harness.md  pyproject.toml
docs/MVP/: gap_analysis.md  mvp_checklist.md
docs/candidate-judge/: PLAN.md
docs/feature/cli-options/: plan.md  tasks.md
docs/feature/multi-step-planning/: plan.md  tasks.md
docs/openai-api/: DESIGN.md
docs/verification/: fibonacci.md
nano_harness/: __init__.py  cli.py  client.py  config.py  judge.py  server.py  state.py  tools.py
