[project]
name = "nano-harness"
version = "0.1.0"
description = "Exploring software development with small nano-class models"
readme = "nano-harness.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100